# made-in-cameroon-market

./: .gitignore  Foundational-planning.md  GOALS.md  PROJECT_PLAN.md  PROJECT_VISION.md  README.md  package-lock.json  project vision and goals  sample-prompt.md
.github/workflows/: backend.yml  frontend.yml  general_checks.yml
backend/: .env.example  .gitignore  Cargo.toml
backend/src/: .env.template  adapters.rs  config.rs  error.rs  lib.rs  main.rs  routes.rs  server.rs  telemetry.rs
backend/src/auth/: jwt.rs  password.rs
backend/src/db/: mod.rs  vendor.rs
backend/src/domain/: marketplace.rs
backend/src/domain/marketplace/: models.rs  ports.rs  service.rs
backend/src/handlers/: auth.rs  document.rs  mod.rs  vendor.rs
backend/src/middleware/: auth.rs  mod.rs
backend/src/models/: admin.rs  mod.rs  vendor.rs
backend/src/server/: responses.rs
backend/src/server/handlers/: health.rs
backend/tests/: health.rs
backend/tests/utils/: mod.rs
docs/: Project-readme.md  goals_and_visions.md  made-in-cameroon-feasibility-analysis.md
frontend/: index.html  offline.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: auth.ts  disputes.ts  metrics.ts  transactions.ts  vendors.ts
frontend/src/components/: DisputeDetails.tsx  MetricsChart.tsx  NetworkStatus.tsx  OfflineBanner.tsx  ProductCard.tsx  ProgressiveImage.tsx  Sidebar.tsx  SkeletonLoader.tsx  Topbar.tsx  TransactionTable.tsx  VendorTable.tsx
frontend/src/context/: AuthContext.tsx
(+29 files in other folders)
