[package]
name = "marketplace-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4.0"
actix-cors = "0.6.4"
actix-multipart = "0.6.0"
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
uuid = { version = "1.4.1", features = ["serde", "v4"] }
chrono = { version = "0.4.31", features = ["serde"] }
jsonwebtoken = "8.3.0"
argon2 = "0.5.2"
env_logger = "0.10.0"
log = "0.4.20"
thiserror = "1.0.49"
futures = "0.3.28"
validator = { version = "0.16.1", features = ["derive"] }
regex = "1.10.2"
lazy_static = "1.4.0"
rusoto_core = "0.48.0"
rusoto_s3 = "0.48.0"
